--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Hazel/vendor/spdlog"]
-	path = Hazel/vendor/spdlog
+[submodule "Bamboo/vendor/spdlog"]
+	path = Bamboo/vendor/spdlog
 	url = https://github.com/gabime/spdlog
